--- a/index.ipynb
+++ b/index.ipynb
@@ -69,16 +69,25 @@
     "\n",
     "> Comments are indicated in Python by a `#` followed by text. They do not get run and will not affect our code. Here we are using them to show what the intended output should be.\n",
     "\n",
-    "For example, let's say we want to capitalize all of the letters of \"art vandlay\".  We'll see the following:"
+    "For example, let's say we want to capitalize all of the letters of \"art vandelay\".  We'll see the following:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'art vandelay'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\" # \"ART VANDELAY\""
    ]
@@ -101,11 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ART VANDELAY'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\".upper() # 'ART VANDELAY'"
    ]
@@ -126,13 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art Vandelay'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "art_vandelay = \"art vandelay\" # 'Art Vandelay'\n",
+    "art_vandelay = \"art vandelay\".title() # 'Art Vandelay'\n",
     "art_vandelay"
    ]
   },
@@ -145,13 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'CEO'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ceo = \"Ceo\" # 'CEO'\n",
+    "ceo = \"Ceo\".upper() # 'CEO'\n",
     "ceo"
    ]
   },
@@ -164,13 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ends_with_com = \"art.vandelay@vandelay.co\" # False\n",
+    "ends_with_com = \"art.vandelay@vandelay.co\".endswith(\".com\") # False\n",
     "ends_with_com"
    ]
   },
@@ -183,14 +228,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "web_address = 'vandelay.com' # 'www.vandelay.com'\n",
+    "web_address = 'www.'+'vandelay.com' # 'www.vandelay.com'\n",
     "web_address"
    ]
   },
@@ -210,25 +265,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "phone_num_one = \"7285553334\" # 7285553335\n",
+    "phone_num_one = int(\"7285553334\")+1 # 7285553335\n",
     "phone_num_one "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553336"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "phone_num_two = \"7285553334\" # 7285553336\n",
+    "phone_num_two = int(\"7285553334\")+2 # 7285553336\n",
     "phone_num_two"
    ]
   },
@@ -270,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
